<resources>
    <string name="app_name">GoogleImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="emptyText">The list is empty. Try searching again</string>
    <string name="offlineText">You are currently offline. Please reconnect and try again</string>
    <string name="imageSizeTitle">Image Size</string>
    <string name="colorFilterTitle">Color Filter</string>
    <string name="imageTypeTitle">Image Type</string>
    <string name="locationFilterTitle">Location Filter</string>
    <string name="saveButtonTitle">Save</string>
    <string name="settingsDialogTitle">Search Filters</string>
    <string name="shareActionTitle">Share</string>

    <string-array name="sizeArray">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="typeArray">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string-array name="colorArray">
        <item>all</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>pink</item>
        <item>purple</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
</resources>
